@@ -5,7 +5,7 @@
   <span tal:replace="structure view/banner/@@published-icon" />
   <a class="button"
      id="breaking-retract-banner"
-     tal:condition="view/banner_published"
+     tal:condition="python: view.banner_published and view.banner_matches"
      cms:cp-module="zeit.edit.LightBoxForm"
      cms:lightbox-reload-id="breaking-retract"
      tal:attributes="href string:${context/@@absolute_url}/@@breaking-banner-retract;
